# fastapi-registation-example

./: docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: auth.py
app/api/dependencies/: auth.py
app/comands/: auth.py
app/config/: config.py  db_config.py
app/db/: repository.py
app/models/: users.py
app/schemas/: auth.py
app/services/: auth_service.py
migrations/models/: 0_20230219122824_init.py
